--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@pinata/sdk": "^1.1.13",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "eslint": "^7.21.0",
     "eslint-config-airbnb-typescript-prettier": "^4.1.0",
